# QuickSesh

./: LICENSE  README.md  main.py  pyproject.toml
static/: fancy.js  styles.css
templates/: .html  A.html  Agra.html  Data Science.html  Forensic Science.html  Gmat.html  Maths.html  Sesh.html  Statistics.html  adam.html  blabla.html  blahaj.html  coding.html  d.html  ddd.html  hello.html  helloworld.html  index.html  library.html  lmao.html  neeltron.html  neeltronishere.html  new.html  notneeltron.html  script.js  song.html  styles.css  test.html  testingagain.html  testingagainandagain.html  testingagainandagainandagain.html
